--- a/package.json
+++ b/package.json
@@ -19,5 +19,9 @@
     "sass": "^1.63.6",
     "sass-loader": "^13.3.2",
     "vitest": "^0.33.0"
+  },
+  "dependencies": {
+    "@headlessui/vue": "^1.7.16",
+    "@heroicons/vue": "^2.0.18"
   }
 }
