--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   "dependencies": {
     "@headlessui/vue": "^1.7.16",
     "@heroicons/vue": "^2.0.18",
-    "@web5/api": "^0.8.3"
+    "@web5/api": "^0.8.3",
+    "vite-plugin-node-stdlib-browser": "0.2.1"
   }
 }
